--- a/src/main/resources/view/item_form.fxml
+++ b/src/main/resources/view/item_form.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="itemNode" prefHeight="610.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.stockmanage102.controller.ItemFormController">
+<AnchorPane fx:id="itemNode" prefHeight="610.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.javafxlayerd.controller.ItemFormController">
    <children>
       <Label alignment="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="49.0" prefWidth="600.0" style="-fx-background-color: #00b894;" text="Item Manage">
          <font>
